--- a/src/app/components/consultaprecios/consultaprecios.component.html
+++ b/src/app/components/consultaprecios/consultaprecios.component.html
@@ -97,15 +97,19 @@
                   <div class="form-row">
                       <div class="form-group col-md-3">
                         <label class="CamposFonelli">Linea</label>
-                        <input
-                          type="text" 
-                          id="idLineaPre"
-                          class="form-control"
+                        <select 
+                          class="form-select" 
                           name="idLineaPre"
                           #nombre="ngModel"
-                          [(ngModel)]="oBuscar.ArticuloLinea"
+                          [(ngModel)]="oBuscar.ArticuloLinea"                            
                           required
-                        >
+                          >
+                        <ng-container *ngFor='let dato of oLineasProCon;' >
+                          <option value="{{dato.LineaCodigo}}">
+                            {{dato.LineaCodigo}} - {{dato.LineaDescripc}}
+                          </option>
+                        </ng-container>
+                      </select>                        
                       </div>
                       <div class="form-group col-md-3">
                         <label class="CamposFonelli">Clave</label>
