--- a/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
+++ b/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
@@ -70,7 +70,7 @@
                           >
                         </div>
                         <div class="form-group col-md-1" [hidden]="bCliente">
-                          <label class="CamposFonelli" style="color: white;">------</label>
+                          <label class="CamposFonelli" style="color: white;">----------</label>
                           <button  type="button" class="btnFonelli btn" (click)="openClientes(Clientes,true)" style="background-color:#24a4cc;"><i class="bi bi-search"></i></button>
                         </div>
                         <div class="form-group col-md-1">
