Se agrega funcionalidad a reportes nuevos

--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -351,8 +351,23 @@
       <div class="modal-body-tables" style="overflow-y: scroll;" >
   
           <div class="container">
-              <div class="row">
-
+              <div class="row">                
+                
+                  <div class="form-group col-md-1">              
+                    <br>
+                    <label class="CamposFonelli">Buscar:</label>
+                  </div>
+                  <div class="form-group col-md-5">    
+                    <br>          
+                    <input
+                        type="text"
+                        class="form-control"
+                        [(ngModel)]="searchtext"
+                        placeholder="Search"                 
+                      />
+                    </div>
+                      
+              
                     <div class="col-12" >                     
                       <table  class="table table-striped">
                         <thead>
@@ -370,9 +385,10 @@
                         </thead>
                         <tbody>
                           <td *ngIf="bCargandoClientes" class="FilasFonelli" style="text-align:center" colspan="10"><span   class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="color:#183e6f"> </span></td>
-                          <tr *ngFor="let emp of oCliente.Contenido; index as i" (click)="obtenCliente(emp.ClienteCodigo,emp.ClienteFilial)">
+                          
+                          <tr *ngFor="let emp of oCliente.Contenido |searchconsultaCliente: searchtext; index as i" (click)="obtenCliente(emp.ClienteCodigo,emp.ClienteFilial)">
                             <th scope="row">{{ i + 1 }}</th>
-                            <td class="form-check" >                              
+                            <td>                              
                               <input  style="border-color: #24a4cc;" type="checkbox">
                             </td> 
                             <td class="FilasFonelli" style="text-align:left">{{emp.ClienteCodigo}}</td>                           
