--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -86,27 +86,29 @@
                     <div class="form-row">
                         <div class="form-group col-md-3" [hidden]="bCliente">
                           <label >Desde cartera</label>
-                          <input 
-                            type="text" 
-                            id="idDesCar"
-                            class="form-control"
+                          <select 
+                            class="form-select" 
                             name="idDesCar"
                             #nombre="ngModel"
                             [(ngModel)]="oBuscar.CarteraDesde"
                             required
                           >
+                            <option value="{{dato.CarteraCodigo}}" *ngFor="let dato of oCarterasCon">{{dato.CarteraCodigo}} - {{dato.CarteraDescripc}}</option>                          
+                          </select>
+                          
                         </div>
                         <div class="form-group col-md-3" [hidden]="bCliente">
                           <label >Hasta cartera</label>
-                          <input 
-                            type="text" 
-                            id="idHasCar"
-                            class="form-control"
+                          <select 
+                            class="form-select" 
                             name="idHasCar"
                             #nombre="ngModel"
                             [(ngModel)]="oBuscar.CarteraHasta"
                             required
                           >
+                            <option value="{{dato.CarteraCodigo}}" *ngFor="let dato of oCarterasCon">{{dato.CarteraCodigo}} - {{dato.CarteraDescripc}}</option>                          
+                          </select>
+                          
                         </div>
                     </div>
   
